--- a/platform/debian/Makefile
+++ b/platform/debian/Makefile
@@ -1,3 +1,6 @@
+ARCH ?= $(dpkg --print-architecture)
+
+
 .DEFAULT: help
 
 .PHONY: help
@@ -7,17 +10,17 @@ help:
 .PHONY: debs/kanidm
 debs/kanidm: ## Build the Kanidm CLI package - make sure you set the environment variable KANIDM_BUILD_PROFILE
 debs/kanidm:
-	bash ./platform/debian/build_kanidm.sh kanidm
+	ARCH=$(ARCH) bash ./platform/debian/build_kanidm.sh kanidm
 
 .PHONY: debs/kanidmd
 debs/kanidmd: ## Build the Kanidmd package - make sure you set the environment variable KANIDM_BUILD_PROFILE
 debs/kanidmd:
-	bash ./platform/debian/build_kanidm.sh kanidmd
+	ARCH=$(ARCH) bash ./platform/debian/build_kanidm.sh kanidmd
 
 .PHONY: debs/kanidm-unixd
 debs/kanidm-unixd: ## Build the Kanidm UNIX tools package (PAM/NSS, unixd and related tools) - make sure you set the environment variable KANIDM_BUILD_PROFILE
 debs/kanidm-unixd:
-	bash ./platform/debian/build_kanidm.sh kanidm-unixd
+	ARCH=$(ARCH) bash ./platform/debian/build_kanidm.sh kanidm-unixd
 
 .PHONY: debs/all
 debs/all: ## Build all the .deb packages - make sure you set the environment variable KANIDM_BUILD_PROFILE
