--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -82,9 +82,9 @@ jobs:
           scripts/install_ubuntu_dependencies.sh
       - name: build with target
         run: |
-          apt-get -y install libssl-dev pkg-config
-          apt-get install -y gcc-aarch64-linux-gnu
-          PKG_CONFIG_ALLOW_CROSS=1 cargo build --target=aarch64-unknown-linux-gnu --release --bin kanidm_unixd --bin kanidm_unixd_tasks --bin kanidm-unix
+          apt-get -y install libssl-dev pkg-config gcc-aarch64-linux-gnu
+          find /usr/include -name '*openssl*'
+          PKG_CONFIG_ALLOW_CROSS=1 cargo build -q --target=aarch64-unknown-linux-gnu --release --bin kanidm_unixd --bin kanidm_unixd_tasks --bin kanidm-unix
           mv target/aarch64-unknown-linux-gnu/release/kanidm* target/release/
       # - name: Install wasm-pack
       #   run: cargo install wasm-pack
