--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -81,6 +81,7 @@ jobs:
           scripts/install_ubuntu_dependencies.sh
       - name: build with target
         run: |
+          dpkg --add-architecture arm64
           apt-get -y install libssl-dev:aarch64 pkg-config gcc-aarch64-linux-gnu rsync
           rsync -av /usr/include/aarch64-unknown-linux-gnu/openssl/* /usr/include/openssl/
           PKG_CONFIG_ALLOW_CROSS=1 cargo build -q --target=aarch64-unknown-linux-gnu --release --bin kanidm_unixd --bin kanidm_unixd_tasks --bin kanidm-unix
