env var config for server

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ pykanidm/site/
 # oauth2 integration test things
 scripts/oauth_proxy/client.secret
 scripts/oauth_proxy/envfile
+# local config things
 .envrc
