--- a/examples/insecure_server.toml
+++ b/examples/insecure_server.toml
@@ -22,5 +22,7 @@ origin = "https://localhost:8443"
 trust_x_forward_for = true
 
 [online_backup]
-path = "/tmp/kanidm/backups/"
+# defaults to db_path
+# path = "/tmp/kanidm/backups/"
 schedule = "@hourly"
+# enabled = true # default enabled
