--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ repository = "https://github.com/kanidm/kanidm/"
 ## As Kanidm maintains a number of libraries, sometimes during development we need to override them
 ## with local or git versions. This patch table allows quick uncommenting to achieve that.
 
-compact_jwt = { path = "../compact_jwt" }
+# compact_jwt = { path = "../compact_jwt" }
 # concread = { path = "../concread" }
 
 # idlset = { path = "../idlset" }
@@ -115,7 +115,7 @@ clap = { version = "^4.4.8", features = ["derive", "env"] }
 clap_complete = "^4.4.4"
 # Forced by saffron/cron
 chrono = "^0.4.31"
-compact_jwt = { version = "^0.3.1", default-features = false }
+compact_jwt = { version = "^0.3.2", default-features = false }
 concread = "^0.4.3"
 cron = "0.12.0"
 crossbeam = "0.8.1"
