adding debs fixes

--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Upload debs
         uses: actions/upload-artifact@v4
         with:
-          name: "packages-${{ matrix.image }}"
+          name: replace("packages-${{ matrix.image }}", ":", "-")
           path: |
             target/*.deb
   upload-to-releases:
