--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -48,6 +48,7 @@ jobs:
       - name: package_hash
         run: |
           echo "packagename=$(echo ${{ matrix.image }} | sha256sum | cut -d' ' -f1)" >> $GITHUB_OUTPUT
+          cat "${GITHUB_OUTPUT}"
       - name: Upload debs
         uses: actions/upload-artifact@v4
         with:
