--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -18,12 +18,14 @@ jobs:
     strategy:
       matrix:
         image:
-          - ubuntu:22.04
-          - debian:12
+          - name: ubuntu
+            version: 22.04
+          - name: debian
+            version: 12
       fail-fast: false
     runs-on: ubuntu-latest
     container:
-      image: ${{ matrix.image }}
+      image: "${{ matrix.image.name }}:${{ matrix.image.version }}"
       env:
         DEBIAN_FRONTEND: noninteractive
     steps:
@@ -45,17 +47,11 @@ jobs:
         run: cargo install wasm-pack
       - name: Build packages (kanidm-unixd)
         run: make -f platform/debian/Makefile debs/kanidm-unixd
-      - name: package_hash
-        run: |
-          echo "PACKAGENAME=$(echo ${{ matrix.image }} | sha256sum | cut -d' ' -f1)" >> $GITHUB_OUTPUT
-          cat "${GITHUB_OUTPUT}"
-      - name: test
-        run: |
-          echo "${{ steps.package_hash.outputs.PACKAGENAME }}"
+
       - name: Upload debs
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ steps.package_hash.outputs.PACKAGENAME }}
+          name: "${{ matrix.image.name }}${{ matrix.image.version }}"
           path: |
             target/*.deb
   upload-to-releases:
