--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -67,6 +67,10 @@ jobs:
     steps:
       - name: Download previously built debs
         uses: actions/download-artifact@v4
+        with:
+          path: debs
+          pattern: "*.deb"
+          merge-multiple: true
       - name: List packages
         run: |
           find $(pwd) -name '*.deb'
@@ -76,5 +80,5 @@ jobs:
           automatic_release_tag: "debs"
           prerelease: true
           title: ".deb Packages"
-          files: "*.deb"
+          files: "debs/*.deb"
         if: ${{ github.ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' }}
