Add a TODO for marvinpinto/action-automatic-releases replacement
There's some options for replacement listed at
https://github.com/marvinpinto/action-automatic-releases/pull/2
.. just better to do that lift & shift separately from this chain.

--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -73,6 +73,8 @@ jobs:
       - name: List packages
         run: |
           find $(pwd) -name '*.deb'
+      # TODO: This action is old and falling apart and will soon stop working.
+      # Context: https://github.com/marvinpinto/action-automatic-releases/pull/2
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
