Fix deb release flow to find the matrix split artifacts (#2406)
* Fix deb release flow to find the artefacts

In a matrix build they end up separated by directories. This fix
sidesteps the whole problem and downloads them into a single directory
with a pattern.

* Temporarily disable repo check to fully test previous commit

* Try without a filter, since it didn't match for some reason

* Add a TODO for marvinpinto/action-automatic-releases replacement

There's some options for replacement listed at
https://github.com/marvinpinto/action-automatic-releases/pull/2
.. just better to do that lift & shift separately from this chain.

* Revert "Temporarily disable repo check to fully test previous commit"

This reverts commit 9f2f0884e45ea889bd9d5acb681b7ee237ae94cb.

---------

Co-authored-by: Jinna Kiisuo <jinna+git@nocturnal.fi>

--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -67,14 +67,19 @@ jobs:
     steps:
       - name: Download previously built debs
         uses: actions/download-artifact@v4
+        with:
+          path: debs
+          merge-multiple: true
       - name: List packages
         run: |
           find $(pwd) -name '*.deb'
+      # TODO: This action is old and falling apart and will soon stop working.
+      # Context: https://github.com/marvinpinto/action-automatic-releases/pull/2
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "debs"
           prerelease: true
           title: ".deb Packages"
-          files: "*.deb"
+          files: "debs/*.deb"
         if: ${{ github.ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' }}
