--- a/.github/workflows/kanidm_book.yml
+++ b/.github/workflows/kanidm_book.yml
@@ -98,7 +98,7 @@ jobs:
       - name: Download individual artifact
         uses: actions/download-artifact@v4
         with:
-          name: ${{ needs.pre_deploy.outputs.latest}}
+          name: "individual${{ needs.pre_deploy.outputs.latest}}"
           path: ./docs/
         env:
           ACTIONS_RUNNER_DEBUG: true
