--- a/libs/crypto/Cargo.toml
+++ b/libs/crypto/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kanidm_lib_crypto"
-version = "1.1.0-rc.15-dev"
+version = { workspace = true }
 edition = { workspace = true }
 description = "Kanidm cryptographic functionality"
 license = { workspace = true }
