--- a/server/lib-macros/Cargo.toml
+++ b/server/lib-macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kanidmd_lib_macros"
-version = "1.1.0-rc.15-dev"
+version = { workspace = true }
 edition = { workspace = true }
 
 [lib]
