feat: initial web ui proof of concept - doesn't compile

--- a/server/web_ui/user/Cargo.toml
+++ b/server/web_ui/user/Cargo.toml
@@ -36,6 +36,7 @@ wasm-timer = "0.2.5"
 regex.workspace = true
 lazy_static.workspace = true
 gloo-utils = { workspace = true }
+enum-iterator = { workspace = true}
 
 [dependencies.web-sys]
 workspace = true
@@ -52,6 +53,7 @@ features = [
     "FormData",
     "Headers",
     "HtmlButtonElement",
+    "HtmlSelectElement",
     "HtmlDocument",
     "HtmlFormElement",
     "Navigator",
@@ -66,6 +68,7 @@ features = [
     "RequestRedirect",
     "Response",
     "Window",
+    "Clipboard"
 ]
 
 [dev-dependencies]
