--- a/server/web_ui/admin/Cargo.toml
+++ b/server/web_ui/admin/Cargo.toml
@@ -31,6 +31,7 @@ wasm-bindgen-futures = { workspace = true }
 yew = { workspace = true, features = ["csr"] }
 yew-router = { workspace = true }
 gloo-utils = { workspace = true }
+enum-iterator = { workspace = true}
 
 [dependencies.web-sys]
 workspace = true
@@ -49,6 +50,8 @@ features = [
     "HtmlButtonElement",
     "HtmlDocument",
     "HtmlFormElement",
+    "HtmlSelectElement",
+    "HtmlInputElement",
     "Navigator",
     # "PublicKeyCredential",
     # "PublicKeyCredentialCreationOptions",
