--- a/.github/workflows/docker_build_radiusd.yml
+++ b/.github/workflows/docker_build_radiusd.yml
@@ -12,6 +12,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+
+  set_lower_case_name:
+    name: set lower case owner name
+    run: |
+      echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+    env:
+      OWNER: '${{ github.repository_owner }}'
+
   radius_build:
     name: Build radius Docker image
     runs-on: ubuntu-latest
@@ -25,7 +33,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           platforms: linux/arm64,linux/amd64
-          tags: ghcr.io/${{ github.repository_owner }}/radius:devel
+          tags: ghcr.io/${{ env.OWNER_LC }}/radius:devel
           file: rlm_python/Dockerfile
           # Must use OCI exporter for multi-arch: https://github.com/docker/buildx/pull/1813
           outputs: type=oci,dest=/tmp/radius-docker.tar
