Conflict nscd, start before sshd

--- a/platform/opensuse/kanidm-unixd.service
+++ b/platform/opensuse/kanidm-unixd.service
@@ -3,9 +3,12 @@
 
 [Unit]
 Description=Kanidm Local Client Resolver
-After=chronyd.service ntpd.service network-online.target
-Before=systemd-user-sessions.service nss-user-lookup.target
+After=chronyd.service nscd.service ntpd.service network-online.target
+Before=systemd-user-sessions.service sshd.service nss-user-lookup.target
 Wants=nss-user-lookup.target
+# While it seems confusing, we need to be after nscd.service so that the
+# Conflicts will triger and then automatically stop it.
+Conflicts=nscd.service
 
 [Service]
 DynamicUser=yes
