Add further hardening for system services

--- a/server/daemon/Cargo.toml
+++ b/server/daemon/Cargo.toml
@@ -43,6 +43,7 @@ serde_json.workspace = true
 
 [target.'cfg(target_os = "linux")'.dependencies]
 sd-notify.workspace = true
+prctl.workspace = true
 
 [target.'cfg(target_family = "windows")'.dependencies]
 whoami = { workspace = true }
