--- a/Cargo.toml
+++ b/Cargo.toml
@@ -184,6 +184,7 @@ tracing-opentelemetry = "0.21.0"
 
 paste = "^1.0.14"
 pkg-config = "^0.3.27"
+prctl = "1.0.0"
 proc-macro2 = "1.0.69"
 qrcode = "^0.12.0"
 quote = "1"
