Re-enable HW tpm support (#2531)

--- a/unix_integration/Cargo.toml
+++ b/unix_integration/Cargo.toml
@@ -90,11 +90,12 @@ tracing = { workspace = true }
 uuid = { workspace = true }
 walkdir = { workspace = true }
 
+[target.'cfg(target_os = "linux")'.dependencies]
+sd-notify.workspace = true
+prctl.workspace = true
+
 [target.'cfg(not(target_family = "windows"))'.dependencies]
 kanidm_utils_users = { workspace = true }
-
-[target.'cfg(target_os = "linux")'.dependencies]
-prctl.workspace = true
 
 [dev-dependencies]
 kanidmd_core = { workspace = true }
