Refactor objectType to be inside proto. cli can't resolve it for some bizare reason.. Extracted some ui html stuff to functions

--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -33,3 +33,5 @@ urlencoding = { workspace = true }
 utoipa = { workspace = true }
 uuid = { workspace = true, features = ["serde"] }
 webauthn-rs-proto = { workspace = true }
+enum-iterator = { workspace = true}
+clap = { workspace = true, features = ["derive"] }
