chore: remove unused clipboard feature chore: remove unused mermaid.sh

--- a/server/web_ui/user/Cargo.toml
+++ b/server/web_ui/user/Cargo.toml
@@ -66,8 +66,7 @@ features = [
     "RequestMode",
     "RequestRedirect",
     "Response",
-    "Window",
-    "Clipboard"
+    "Window"
 ]
 
 [dev-dependencies]
