--- a/Cargo.toml
+++ b/Cargo.toml
@@ -189,6 +189,7 @@ proc-macro2 = "1.0.69"
 qrcode = "^0.12.0"
 quote = "1"
 rand = "^0.8.5"
+rand_chacha = "0.3.1"
 regex = "1.10.2"
 reqwest = { version = "0.11.20", default-features = false, features = [
     "cookies",
