Feature object graph (#2518)
* Refactor: move the object graph ui to admin web ui
* Add dynamic js loading support
Load viz.js dynamically
* Add some js docs
* chore: cleanup imports
* chore: remove unused clipboard feature
chore: remove unused mermaid.sh
* Messing with the profile.release settings and reverting the changes I tried has now made the build much smaller yay :D
* Refactor: user raw search requests
Assert service-accounts properly
* refactor: new v1 proto structure
* Add self to CONTRIBUTORS.md

---------

Co-authored-by: James Hodgkinson <james@terminaloutcomes.com>

--- a/server/web_ui/user/Cargo.toml
+++ b/server/web_ui/user/Cargo.toml
@@ -36,6 +36,7 @@ wasm-timer = "0.2.5"
 regex.workspace = true
 lazy_static.workspace = true
 gloo-utils = { workspace = true }
+enum-iterator = { workspace = true}
 
 [dependencies.web-sys]
 workspace = true
@@ -65,7 +66,7 @@ features = [
     "RequestMode",
     "RequestRedirect",
     "Response",
-    "Window",
+    "Window"
 ]
 
 [dev-dependencies]
