--- a/tools/orca/Cargo.toml
+++ b/tools/orca/Cargo.toml
@@ -18,23 +18,20 @@ test = true
 doctest = false
 
 [dependencies]
+async-trait = { workspace = true }
 clap = { workspace = true }
 crossbeam = { workspace = true }
 csv = { workspace = true }
-dialoguer = { workspace = true }
 futures-util = { workspace = true, features = ["sink"] }
 hashbrown = { workspace = true }
 kanidm_client = { workspace = true }
 kanidm_proto = { workspace = true }
-ldap3_proto = { workspace = true }
 mathru = { workspace = true }
-openssl = { workspace = true }
 rand = { workspace = true }
+rand_chacha = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-tokio = { workspace = true, features = ["rt-multi-thread"] }
-tokio-openssl = { workspace = true }
-tokio-util = { workspace = true, features = ["codec"] }
+tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
 toml = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
@@ -45,3 +42,4 @@ tikv-jemallocator = { workspace = true }
 
 [build-dependencies]
 kanidm_build_profiles = { workspace = true }
+
