--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ repository = "https://github.com/kanidm/kanidm/"
 ## with local or git versions. This patch table allows quick uncommenting to achieve that.
 
 # compact_jwt = { path = "../compact_jwt" }
-# concread = { path = "../concread" }
+concread = { path = "../concread" }
 
 # idlset = { path = "../idlset" }
 
