--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,6 +111,7 @@ axum-csp = { version = "0.0.5" }
 base32 = "^0.4.0"
 base64 = "^0.21.7"
 base64urlsafedata = "0.1.3"
+bitflags = "^2.4.2"
 bytes = "^1.5.0"
 clap = { version = "^4.5.3", features = ["derive", "env"] }
 clap_complete = "^4.5.1"
