--- a/tools/orca/Cargo.toml
+++ b/tools/orca/Cargo.toml
@@ -32,9 +32,9 @@ rand = { workspace = true }
 rand_chacha = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-statrs = "0.16.0"
-strum = "0.26.2"
-strum_macros = "0.26.2"
+# statrs = "0.16.0"
+# strum = "0.26.2"
+# strum_macros = "0.26.2"
 tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
 toml = { workspace = true }
 tracing = { workspace = true }
