--- a/tools/cli/Cargo.toml
+++ b/tools/cli/Cargo.toml
@@ -35,6 +35,7 @@ test = true
 doctest = false
 
 [dependencies]
+anyhow = { workspace = true }
 async-recursion = { workspace = true }
 clap = { workspace = true, features = ["derive", "env"] }
 compact_jwt = { workspace = true, features = ["openssl"] }
