--- a/tools/orca/Cargo.toml
+++ b/tools/orca/Cargo.toml
@@ -32,6 +32,7 @@ rand = { workspace = true }
 rand_chacha = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+strum = { version = "0.26.2", features = ["derive"] }
 # statrs = "0.16.0"
 # strum = "0.26.2"
 # strum_macros = "0.26.2"
