--- a/libs/sketching/Cargo.toml
+++ b/libs/sketching/Cargo.toml
@@ -17,7 +17,7 @@ test = false
 doctest = false
 
 [dependencies]
-gethostname = "0.4.3"
+gethostname = { workspace = true }
 num_enum = { workspace = true }
 opentelemetry = { workspace = true, features = ["metrics", "rt-tokio"] }
 opentelemetry-otlp = { workspace = true, default-features = false, features = [
