--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -51,19 +51,19 @@ url = { workspace = true, features = ["serde"] }
 kanidm_build_profiles = { workspace = true }
 
 [dev-dependencies]
-assert_cmd = "2.0.14"
+assert_cmd = { workspace = true }
 compact_jwt = { workspace = true }
-escargot = "0.5.10"
+escargot = { workspace = true }
 # used for webdriver testing
-fantoccini = { version = "0.19.3" }
+fantoccini = { workspace = true }
 futures = { workspace = true }
 oauth2_ext = { workspace = true, default-features = false }
 openssl = { workspace = true }
-petgraph = { version = "0.6.4", features = ["serde", "serde-1"] }
+petgraph = { workspace = true, features = ["serde", "serde-1"] }
 serde_json = { workspace = true }
 time = { workspace = true }
 tokio-openssl = { workspace = true }
 kanidm_lib_crypto = { workspace = true }
 uuid = { workspace = true }
 webauthn-authenticator-rs = { workspace = true }
-jsonschema = "0.17.1"
+jsonschema = { workspace = true }
