--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -16,6 +16,7 @@ test = true
 doctest = false
 
 [dependencies]
+compact_jwt = { workspace = true }
 tracing = { workspace = true }
 reqwest = { workspace = true, default-features = false, features = [
     "cookies",
