Add some metadata for lib macros

--- a/server/lib-macros/Cargo.toml
+++ b/server/lib-macros/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
 name = "kanidmd_lib_macros"
+description = "Kanidm Server Library Support Macros"
+documentation = "https://docs.rs/kanidm/latest/kanidm/"
+
 version = { workspace = true }
+authors = { workspace = true }
+rust-version = { workspace = true }
 edition = { workspace = true }
+license = { workspace = true }
+homepage = { workspace = true }
+repository = { workspace = true }
 
 [lib]
 proc-macro = true
