--- a/server/daemon/Cargo.toml
+++ b/server/daemon/Cargo.toml
@@ -26,6 +26,7 @@ dhat-ad-hoc = ["dep:dhat"]
 [dependencies]
 kanidm_proto = { workspace = true }
 kanidmd_core = { workspace = true }
+kanidm_lib_crypto = { workspace = true }
 kanidm_lib_file_permissions = { workspace = true }
 sketching = { workspace = true }
 fs4 = { workspace = true }
